--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,10 +15,95 @@
   <![endif]-->
 </head>
 
-  <body>
+<!-- Navigation bar and logo fixed at top of window -->
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+<body>
+  <div class="fixed-header">
+    <header class="main-header">
+      <nav class="main-nav">
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+
+      <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+
+    </header>
+  </div>
+
+  <!-- Main container to hold all page content -->
+
+  <div class="container">
+    <header class="container-header">
+      <div class="logo-button-container">
+        <h1>Innovation</h1>
+        <h1>On</h1>
+        <h1>Demand</h1>
+        <button class="header-button">Get Started</button>
+      </div>
+
+      <img src="img/header-img.png" alt="Image of a code snippet." class="header-img">
+    </header>
+
+    <hr class="divider">
+
+    <section class="content">
+      <div class="two-column right-padding">
+        <h3>Features</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+          eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class="two-column left-padding">
+        <h3>About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+          eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
+
+    <img class="middle-img top-padding bottom-padding" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+    <section class="content">
+      <div class="three-column right-padding">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+          eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class="three-column right-padding left-padding">
+        <h3>Product</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+          eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class="three-column left-padding">
+        <h3>Vision</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+          eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
+
+    <hr class="divider">
+
+    <section class="contact">
+      <h3>Contact</h3>
+      <address>
+        <span class="block-address">123 Way 456 Street</span>
+        <span class="block-address">Somewhere, USA</span>
+      </address>
+      <address>1 (888) 888-8888</address>
+      <address>sales@greatidea.io</address>
+    </section>
+
+    <footer>Copyright Great Idea! 2018</footer>
+
+  </div>
+
+</body>
+
 </html>
